src/style.css
body {
font-family: 'Montserrat', sans-serif;
}


.form-control{
    position: relative;
    right: 100px;
}
.container-wrapper {
    margin: 0 auto;
    max-width: 800px;

}
.container {
    margin-top: 30px;
    padding-top: 30px;
    padding-bottom: 30px;
    border-radius: 5px;
    border: 1px solid gray;

}


 .btnsearch {
    position: relative;
    left: 140px;
    bottom: 38px;

    
}

.search-location {
    position: relative;
    left: 140px;
    bottom: 38px;
    font-weight: 200;
}


.bigicon {
    display: block;
    margin-top: 10px;
    position: relative;
    left: 100px; 
}

.city {
    text-align: center;
    font-weight: 800;
    font-size: 40px;
}

.datetime {
    text-align: center;
    font-weight: 300;
    font-size: 25px;
}

.current-temp {
    text-align: center;
    font-size: 35px;
    font-weight: 800;
}

.maxmin {
    text-align: center;
    font-size: 20px;
}


.col-2 {
    text-align: center;
    padding-top: 5px;
    padding-bottom: 3px;
    background-color: rgb(214, 231, 236,0.4);
   
}

.day {
    font-size: 40px;
    margin-top: 5px;
}    

.info  {
    margin-top: 83px;
    font-size: 20px;
}

.fcbtn {
    position: relative;
    top: 70px;

}

